# kws-decoder

./: CMakeLists.txt  README.md  beam_search.py  compile.sh  decoder_test.py  pyproject.toml  trie_test.py
cpp/: kws_decoder.cpp  wrapper.cpp
resources/: labels.json
src/: counter.cpp  counter.h  counter_test.cpp  kws_decoder.cpp  kws_decoder.h  node.cpp  node.h  node_test.cpp  trie.cpp  trie.h  trie_test.cpp  wrapper.cpp
src/kws_decoder/: __init__.py
tests/: beam_search.py  decoder_test.py  test_decoder.py
tests/data/: fa_output.pth  labels.json  output.pth
