[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "kws-decoder"
version = "0.1.0"
description = "Keyword spotting decoder built with PyBind11"
authors = [{ name="Your Name", email="you@example.com" }]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
